--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser-dynamic": "7.2.0",
     "@angular/router": "7.2.0",
     "@ng-bootstrap/ng-bootstrap": "2.0.0",
+    "angular2-text-mask": "^9.0.0",
     "animate.css": "^3.7.0",
     "bootstrap": "4.1.2",
     "bootstrap-material-design": "^4.1.1",
