--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "bootstrap-material-design": "^4.1.1",
         "core-js": "2.4.1",
         "hammerjs": "^2.0.8",
-        "jquery": "3.2.1",
+        "jquery": "^3.2.1",
         "jw-bootstrap-switch-ng2": "2.0.1",
         "ng-animate": "^0.3.4",
         "ng-http-loader": "^6.0.1",
