--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
         "@angular/language-service": "7.2.0",
         "@types/jasmine": "2.5.45",
         "@types/node": "6.0.60",
+        "@types/stripe-checkout": "^1.0.3",
+        "@types/stripe-v3": "^3.1.14",
         "codelyzer": "4.4.3",
         "jasmine-core": "2.6.2",
         "jasmine-spec-reporter": "4.1.0",
